# audiobookshelf-discord-rpc

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  config.json.example  docker-compose.yml  index.js  package-lock.json  package.json
.github/workflows/: installer-release.yml  release.yml
config/: config.json.example
installer/: Cargo.toml
installer/src/: main.rs
src/: main.rs
