[package]
name = "audiobookshelf-discord-rpc"
version = "0.1.0"
edition = "2021"
authors = ["0xGingi <0xgingi@0xgingi.com>"]
description = "Displays what you're listening to on Audiobookshelf on Discord"


[dependencies]
tokio = { version = "1", features = ["full"] }
discord-rich-presence = "0.2.4"
reqwest = { version = "0.12.7", features = ["json"] }
serde_json = "1.0.128"
url = "2.5.2"