[package]
name = "audiobookshelf-discord-rpc-installer"
version = "1.4.2"
edition = "2021"
authors = ["0xGingi <0xgingi@0xgingi.com>"]
description = "Installer for Audiobookshelf Discord RPC"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "shellapi"] }

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = 'abort'
strip = "symbols"